weekend work, fixed some pc-version bugs

--- a/arm/pc-version/CMakeLists.txt
+++ b/arm/pc-version/CMakeLists.txt
@@ -1,5 +1,9 @@
 # trying this out...
 cmake_minimum_required(VERSION 2.6)
+
 # name project
 project(pc-armMon)
-add_executable(pc-armMon main.c monitor.c circbuf.c genmonconfig.c)
+
+
+set(CMAKE_BUILD_TYPE Debug)
+add_executable(pc-armMon pc-main.c monitor.c circbuf.c genmonconfig.c)
