fixed some bugs and worked on pc-version -- needs some testing but looks like it's working now

--- a/arm/armMon/src/CMakeLists.txt
+++ b/arm/armMon/src/CMakeLists.txt
@@ -21,6 +21,8 @@ else() #(DO_MON_BOTH)
 endif()	
 
 set(CMAKE_BUILD_TYPE Debug)
+if (CMAKE_HOST_LINUX)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -lrt")
-add_definitions("-D PCVERSION")
+endif()
+add_definitions("-D PC_MODE")
 add_executable(pc-armMon pc-main.c monitor.c circbuf.c genmonconfig.c)
