--- a/arm/armMon/src/CMakeLists.txt
+++ b/arm/armMon/src/CMakeLists.txt
@@ -20,8 +20,11 @@ else() #(DO_MON_BOTH)
 	message(STATUS "building cons/aggr monitor")
 endif()	
 
-set(CMAKE_BUILD_TYPE Debug)
-if (CMAKE_HOST_LINUX)
+#if (CMAKE_HOST_UNIX)
+if (APPLE)
+	message(STATUS "Compiling on Apple")
+elseif (UNIX)
+message(STATUS "HOST IS LINUX")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -lrt")
 endif()
 add_definitions("-D PC_MODE")
