more bugfixes (looks like it's working) and config compiler handles multiple formulas (pc-version runs but only checks first formula currently)

--- a/arm/armMon-confbuild/Makefile
+++ b/arm/armMon-confbuild/Makefile
@@ -7,3 +7,11 @@ lex.yy.c: bmtl.l bmtl.tab.h
 
 bmtl: lex.yy.c bmtl.tab.c bmtl.tab.h
 	g++ bmtl.tab.c lex.yy.c -o bmtl
+
+
+### make new parser
+bmtl2.tab.c bmtl2.tab.h: bmtl2.y
+	bison -d bmtl2.y
+
+bmtl2: lex.yy.c bmtl2.tab.c bmtl2.tab.h
+	g++ bmtl2.tab.c lex.yy.c -o bmtl2
