--- a/arm/armMon/src/maskdefs.in
+++ b/arm/armMon/src/maskdefs.in
@@ -7,5 +7,7 @@
 #define MASK_perT10 (1<<(5))
 #define MASK_perT100 (1<<(6))
 #define MASK_perT1000 (1<<(7))
-#define MASK_perF3 (1<<(8))
-#define MASK_perF10 (1<<(9))
+#define MASK_perT10000 (1<<(8))
+#define MASK_perF3 (1<<(9))
+#define MASK_perF10 (1<<(10))
+#define MASK_perF100 (1<<(11))
