added options to config compiler, now controls intervals/lists/aggr/cons/etc

--- a/arm/armMon/src/CMakeLists.txt
+++ b/arm/armMon/src/CMakeLists.txt
@@ -9,16 +9,16 @@ project(pc-armMon)
 #option(DO_MON_CONS OFF)
 #option(DO_MON_AGGR OFF)
 
-if (DO_MON_CONS) 
-	add_definitions("-D MON_TYPE -D MON_CONS")
-	message(STATUS "building conservative monitor")
-elseif (DO_MON_AGGR)
-	add_definitions("-D MON_TYPE -D MON_AGGR")
-	message(STATUS "building aggressive monitor")
-else() #(DO_MON_BOTH)
-	add_definitions("-D MON_TYPE -D MON_CONS -D MON_AGGR")
-	message(STATUS "building cons/aggr monitor")
-endif()	
+#if (DO_MON_CONS) 
+#	add_definitions("-D MON_TYPE -D MON_CONS")
+#	message(STATUS "building conservative monitor")
+#elseif (DO_MON_AGGR)
+#	add_definitions("-D MON_TYPE -D MON_AGGR")
+#	message(STATUS "building aggressive monitor")
+#else() #(DO_MON_BOTH)
+#	add_definitions("-D MON_TYPE -D MON_CONS -D MON_AGGR")
+#	message(STATUS "building cons/aggr monitor")
+#endif()	
 
 #if (CMAKE_HOST_UNIX)
 if (APPLE)
