--- a/arm/armMon/src/maskdefs.in
+++ b/arm/armMon/src/maskdefs.in
@@ -1,13 +1,1 @@
-// Provided masks instead of derived from formula!!
-#define MASK_time (1<<(0))
-#define MASK_allT (1<<(1))
-#define MASK_allF (1<<(2))
-#define MASK_alt1 (1<<(3))
-#define MASK_perT3 (1<<(4))
-#define MASK_perT10 (1<<(5))
-#define MASK_perT100 (1<<(6))
-#define MASK_perT1000 (1<<(7))
-#define MASK_perT10000 (1<<(8))
-#define MASK_perF3 (1<<(9))
-#define MASK_perF10 (1<<(10))
-#define MASK_perF100 (1<<(11))
+masks/maskdef1000.in
