--- a/rv2015/Makefile
+++ b/rv2015/Makefile
@@ -9,11 +9,11 @@ all:
 	ps2pdf  $(input).ps
 
 win:
-	latex $(input)
+	pdflatex $(input)
 	-bibtex $(input)
-	latex $(input)
-	latex $(input)
-	dvipdfmx -p letter $(input)
+	pdflatex $(input)
+	pdflatex $(input)
+#	dvipdfmx -p letter $(input)
 
 clean:
 	rm -f *.ps *.aux *.lof *.lot *.out *.log *.dvi *.bbl *.toc *.blg  *~ 
